SERVER-15247 GroupCommand::parseRequest() read CodeWScope correctly